# fastp-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml
contracts/: README.md  report-json-v1.json
docs/: BENCHMARKS.md  CONTRIBUTING.md  PARITY.md  static-analysis.md
fixtures/a/: README.md  il_two_pairs.fq  pe_r2.fq  se_two_reads.fq
fixtures/a/expected/: pe_two_pairs_o1.fq
fixtures/b/: README.md
scripts/ci/: bench_compare.sh  fetch_fixture_b.sh
scripts/joern/: README.md  parse-background.sh  parse.sh  survey-background.sh  survey.sc
src/: complexity.rs  config.rs  dedup.rs  fastq.rs  io.rs  lib.rs  main.rs  merge.rs  phred.rs  pipeline.rs  qc.rs  quality_gate.rs  read_parts.rs  report.rs  split.rs  trim.rs  umi.rs
src/fastp/: adaptertrimmer.rs  basecorrector.rs  bgzf.rs  cmdline.rs  common.rs  duplicate.rs  evaluator.rs  fastareader.rs  fastqreader.rs  filter.rs  filterresult.rs  htmlreporter.rs  jsonreporter.rs  knownadapters.rs  main.rs  matcher.rs  mod.rs  nucleotidetree.rs  options.rs  overlapanalysis.rs  peprocessor.rs  polyx.rs  processor.rs  read.rs  readpool.rs  seprocessor.rs  sequence.rs  simd.rs  singleproducersingleconsumerlist.rs  stats.rs  threadconfig.rs  umiprocessor.rs  unittest.rs  util.rs  writer.rs  writerthread.rs
tests/: cli_smoke.rs  golden_fixture_a.rs  json_contract_and_html_smoke.rs
upstream/fastp/: Doxyfile.fastp-rs
upstream/fastp/doc/doxygen/html/: bgzf_8h.js  (+110 more)
upstream/fastp/doc/joern/: fastp-cpg
upstream/fastp/workspace/fastp-cpg/: cpg.bin.tmp
(+446 files in other folders)
