[package]
name = "fastp_rs"
version = "0.2.0"
edition = "2021"
description = "Rust reimplementation of fastp-style FASTQ preprocessing"
license = "MIT"
readme = "README.md"
keywords = ["bioinformatics", "fastq", "ngs", "qc"]
categories = ["science"]

[[bin]]
name = "fastp-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
